Add bootstrap components

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
   "rules": {
     "func-names": ["error", "never"],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+  },
+  "globals": {
+    "document": true
   }
 }
