--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   },
   "globals": {
-    "document": true
+    "document": true,
+    "sessionStorage": true,
   }
 }
